fix(core,cli): make replay work against real LLM endpoints
Live-endpoint validation exposed wire-protocol, fingerprint and parser
gaps that local stubs cannot catch; vendor dialect fields are now
configurable through llm.extraBody. Test sources are unified with main
code at the Java 8 level so JDK 8-only contributors can run the suite
and IDE imports stay unambiguous.

Assisted-by: AI coding agent