@@ -1,18 +1,20 @@
 package io.github.agentassert4j.cli.llm;
 
+import com.sun.net.httpserver.HttpServer;
 import io.github.agentassert4j.model.LlmRequest;
 import io.github.agentassert4j.model.LlmResponse;
 import io.github.agentassert4j.model.ToolCallResult;
 import io.github.agentassert4j.model.TurnContext;
 import io.github.agentassert4j.spi.LlmTimeoutException;
 import io.github.agentassert4j.util.RecursiveJsonParser;
-import com.sun.net.httpserver.HttpServer;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 
 import java.net.InetSocketAddress;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -69,7 +71,7 @@ class OpenAiCompatibleClientTest {
         LlmRequest request = new LlmRequest();
         request.setSystemPrompt("System");
         request.setUserInput("Current");
-        request.setPreviousTurns(List.of(new TurnContext("user", "Previous question"), new TurnContext("assistant", "Previous answer")));
+        request.setPreviousTurns(Arrays.asList(new TurnContext("user", "Previous question"), new TurnContext("assistant", "Previous answer")));
 
         String body = client.buildRequestBody(request, "gpt-4o");
 
@@ -289,8 +291,7 @@ class OpenAiCompatibleClientTest {
             });
             server.start();
             try {
-                OpenAiCompatibleClient c = new OpenAiCompatibleClient(
-                        "http://127.0.0.1:" + server.getAddress().getPort(), "key", "test", 2);
+                OpenAiCompatibleClient c = new OpenAiCompatibleClient("http://127.0.0.1:" + server.getAddress().getPort(), "key", "test", 2);
                 LlmRequest request = new LlmRequest();
                 request.setUserInput("hi");
 
@@ -322,8 +323,7 @@ class OpenAiCompatibleClientTest {
             String body = client.buildRequestBody(request, "gpt-4o");
 
             assertTrue(body.contains("\"role\":\"tool\""));
-            assertTrue(body.contains("\"tool_call_id\":\"call_abc\""),
-                    "tool 消息缺 tool_call_id 会被服务端以 400 拒绝");
+            assertTrue(body.contains("\"tool_call_id\":\"call_abc\""), "tool 消息缺 tool_call_id 会被服务端以 400 拒绝");
         }
 
         @Test
@@ -366,13 +366,163 @@ class OpenAiCompatibleClientTest {
 
             String body = client.buildRequestBody(request, "gpt-4o");
 
-            @SuppressWarnings("unchecked")
-            Map<String, Object> parsed = (Map<String, Object>) RecursiveJsonParser.parse(body);
-            @SuppressWarnings("unchecked")
-            List<Object> messages = (List<Object>) parsed.get("messages");
-            @SuppressWarnings("unchecked")
-            Map<String, Object> userMessage = (Map<String, Object>) messages.get(messages.size() - 1);
+            @SuppressWarnings("unchecked") Map<String, Object> parsed = (Map<String, Object>) RecursiveJsonParser.parse(body);
+            @SuppressWarnings("unchecked") List<Object> messages = (List<Object>) parsed.get("messages");
+            @SuppressWarnings("unchecked") Map<String, Object> userMessage = (Map<String, Object>) messages.get(messages.size() - 1);
             assertEquals(hostile, userMessage.get("content"), "转义后解析必须还原原始内容");
+        }
+    }
+
+    @Nested
+    class ToolCallSequence {
+
+        private List<Map<String, Object>> messagesOf(String body) {
+            @SuppressWarnings("unchecked") Map<String, Object> parsed = (Map<String, Object>) RecursiveJsonParser.parse(body);
+            assertNotNull(parsed, "请求体必须可解析");
+            @SuppressWarnings("unchecked") List<Map<String, Object>> messages = (List<Map<String, Object>>) parsed.get("messages");
+            return messages;
+        }
+
+        private TurnContext turn(String role, String content) {
+            return new TurnContext(role, content);
+        }
+
+        @Test
+        @DisplayName("tool 轮之前必须合成携带同 id tool_calls 的 assistant 帧")
+        void syntheticAssistantInjectedBeforeToolTurn() {
+            LlmRequest request = new LlmRequest();
+            request.setSystemPrompt("sys");
+            request.setUserInput("最终提问");
+            request.addTurn(turn("user", "第一问"));
+            request.addTurn(turn("assistant", "我先查一下。"));
+
+            TurnContext toolResult = turn("tool", "{\"status\":\"ok\"}");
+            toolResult.setToolCallId("call_abc");
+            toolResult.setToolName("query_order");
+            request.addTurn(toolResult);
+
+            String body = client.buildRequestBody(request, "gpt-4o");
+            List<Map<String, Object>> messages = messagesOf(body);
+
+            int toolIndex = -1;
+            for (int i = 0; i < messages.size(); i++) {
+                if ("tool".equals(messages.get(i).get("role"))) {
+                    toolIndex = i;
+                }
+            }
+            assertTrue(toolIndex > 0, "必须存在 tool 轮");
+
+            Map<String, Object> preceding = messages.get(toolIndex - 1);
+            assertEquals("assistant", preceding.get("role"), "tool 轮的紧邻前驱必须是 assistant（服务端硬约束）");
+            @SuppressWarnings("unchecked") List<Map<String, Object>> toolCalls = (List<Map<String, Object>>) preceding.get("tool_calls");
+            assertNotNull(toolCalls, "紧邻前驱 assistant 必须携带 tool_calls");
+            assertEquals("call_abc", toolCalls.get(0).get("id"), "tool_calls.id 必须与 tool_call_id 对应");
+            @SuppressWarnings("unchecked") Map<String, Object> fn = (Map<String, Object>) toolCalls.get(0).get("function");
+            assertEquals("query_order", fn.get("name"));
+        }
+
+        @Test
+        @DisplayName("连续两个不同 id 的 tool 轮各自获得配对的 assistant 帧")
+        void consecutiveToolTurns_eachGetPair() {
+            LlmRequest request = new LlmRequest();
+            request.setUserInput("继续");
+            TurnContext t1 = turn("tool", "r1");
+            t1.setToolCallId("call_a");
+            t1.setToolName("fn_a");
+            request.addTurn(t1);
+            TurnContext assistAfterA = turn("assistant", "第一轮结果分析完毕");
+            request.addTurn(assistAfterA);
+            TurnContext t2 = turn("tool", "r2");
+            t2.setToolCallId("call_b");
+            t2.setToolName("fn_b");
+            request.addTurn(t2);
+
+            String body = client.buildRequestBody(request, "gpt-4o");
+            List<Map<String, Object>> messages = messagesOf(body);
+            int pairs = 0;
+            for (int i = 1; i < messages.size(); i++) {
+                if ("tool".equals(messages.get(i).get("role"))) {
+                    assertEquals("assistant", messages.get(i - 1).get("role"), "每个 tool 轮前都必须是 assistant 帧");
+                    pairs++;
+                }
+            }
+            assertEquals(2, pairs, "两个 tool 轮必须各有一帧配对");
+        }
+
+        @Test
+        @DisplayName("转义往返：合成帧不破坏整体 JSON 合法性")
+        void syntheticFrame_bodyStaysParsable() {
+            LlmRequest request = new LlmRequest();
+            request.setUserInput("x\"y\\z");
+            TurnContext t = turn("tool", "a\"b");
+            t.setToolCallId("call_\"x");
+            t.setToolName("fn");
+            request.addTurn(t);
+
+            String body = client.buildRequestBody(request, "gpt-4o");
+            assertNotNull(RecursiveJsonParser.parse(body), "含特殊字符时请求体仍须为合法 JSON");
+        }
+    }
+
+    @Nested
+    class ExtraBodyFields {
+
+        @Test
+        @DisplayName("方言扩展片段原样注入请求体顶层")
+        void valve_appendedVerbatimAtTopLevel() {
+            OpenAiCompatibleClient deepseek = new OpenAiCompatibleClient("https://api.deepseek.com", "test-key", "deepseek-v4-flash-vision-exp", 2, "\"thinking\":{\"type\":\"disabled\"}");
+            LlmRequest request = new LlmRequest();
+            request.setSystemPrompt("You are helpful");
+            request.setUserInput("Hello");
+
+            String body = deepseek.buildRequestBody(request, "deepseek-v4-flash-vision-exp");
+
+            Object parsed = RecursiveJsonParser.parse(body);
+            assertInstanceOf(Map.class, parsed, "注入扩展片段后请求体必须仍是合法 JSON");
+            @SuppressWarnings("unchecked") Map<String, Object> root = (Map<String, Object>) parsed;
+            @SuppressWarnings("unchecked") Map<String, Object> thinking = (Map<String, Object>) root.get("thinking");
+            assertEquals("disabled", thinking.get("type"), "扩展成员必须出现在请求体顶层");
+        }
+
+        @Test
+        @DisplayName("未配置扩展时请求体不含多余逗号——仍是合法 JSON")
+        void valve_absent_producesCleanBody() {
+            LlmRequest request = new LlmRequest();
+            request.setUserInput("Hello");
+
+            String body = client.buildRequestBody(request, "gpt-4o");
+
+            Object parsed = RecursiveJsonParser.parse(body);
+            assertInstanceOf(Map.class, parsed, "无扩展时请求体必须是合法 JSON");
+        }
+
+        @Test
+        @DisplayName("空白扩展按无扩展处理")
+        void valve_blank_treatedAsAbsent() {
+            OpenAiCompatibleClient blank = new OpenAiCompatibleClient("https://api.openai.com", "test-key", "gpt-4o", 2, "   ");
+
+            LlmRequest request = new LlmRequest();
+            request.setUserInput("Hello");
+
+            String body = blank.buildRequestBody(request, "gpt-4o");
+            assertFalse(body.contains(",}"), "空白扩展不得留下悬空逗号破坏 JSON");
+            assertInstanceOf(Map.class, RecursiveJsonParser.parse(body));
+        }
+
+        @Test
+        @DisplayName("扩展与 tools 定义共存时序正确")
+        void valve_coexistsWithToolDefinitions() {
+            OpenAiCompatibleClient withValve = new OpenAiCompatibleClient("https://api.openai.com", "test-key", "gpt-4o", 2, "\"thinking\":{\"type\":\"disabled\"},\"max_tokens\":256");
+            LlmRequest request = new LlmRequest();
+            request.setUserInput("查订单");
+            request.setToolDefinitions(Collections.singletonList("{\"type\":\"function\",\"function\":{\"name\":\"query_order\",\"parameters\":{\"type\":\"object\",\"properties\":{}}}}"));
+
+            String body = withValve.buildRequestBody(request, "gpt-4o");
+
+            @SuppressWarnings("unchecked") Map<String, Object> parsed = (Map<String, Object>) RecursiveJsonParser.parse(body);
+            assertNotNull(parsed.get("tools"), "tools 定义必须保留");
+            assertEquals(256L, parsed.get("max_tokens"), "多成员扩展片段必须全部生效");
+            assertNotNull(parsed.get("messages"));
         }
     }
 }
