@@ -14,8 +14,8 @@ import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
-import java.util.List;
 import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -52,7 +52,7 @@ class RegressionTestExecutorTest {
     void buildReplayRequest_injectsPreviousTurns() {
         InteractionRecord baseline = makeBaseline("hash", "input");
         baseline.setTurnIndex(2);
-        baseline.setPreviousTurns(List.of(new TurnContext("user", "q1"), new TurnContext("assistant", "a1"), new TurnContext("tool", "result1")));
+        baseline.setPreviousTurns(Arrays.asList(new TurnContext("user", "q1"), new TurnContext("assistant", "a1"), new TurnContext("tool", "result1")));
 
         TestExecutionConfig config = TestExecutionConfig.defaults();
         LlmRequest request = executor.buildReplayRequest(baseline, "prompt", config);
@@ -97,8 +97,8 @@ class RegressionTestExecutorTest {
         ToolCallResult tc = new ToolCallResult();
         tc.setToolCallId("call_1");
         tc.setToolName("queryOrder");
-        tc.setArguments(Map.of("orderId", "ORD-001"));
-        response.setToolCalls(List.of(tc));
+        tc.setArguments(Collections.singletonMap("orderId", "ORD-001"));
+        response.setToolCalls(Collections.singletonList(tc));
 
         InteractionRecord current = executor.buildCurrentRecord(baseline, response, "new prompt");
 
@@ -297,7 +297,7 @@ class RegressionTestExecutorTest {
             TurnContext toolTurn = new TurnContext("tool", "result1");
             toolTurn.setToolCallId("call_abc");
             toolTurn.setToolName("queryOrder");
-            baseline.setPreviousTurns(List.of(toolTurn));
+            baseline.setPreviousTurns(Collections.singletonList(toolTurn));
 
             LlmRequest request = executor.buildReplayRequest(baseline, "prompt", TestExecutionConfig.defaults());
 
@@ -311,7 +311,7 @@ class RegressionTestExecutorTest {
         void buildReplayRequest_turnCopiesAreIsolated() {
             InteractionRecord baseline = makeBaseline("hash", "input");
             baseline.setTurnIndex(1);
-            baseline.setPreviousTurns(List.of(new TurnContext("user", "q1")));
+            baseline.setPreviousTurns(Collections.singletonList(new TurnContext("user", "q1")));
 
             LlmRequest request = executor.buildReplayRequest(baseline, "prompt", TestExecutionConfig.defaults());
 
@@ -450,9 +450,9 @@ class RegressionTestExecutorTest {
         ToolCall tc = new ToolCall();
         tc.setToolName("queryOrder");
         tc.setToolCallId("tc-1");
-        tc.setArguments(Map.of("orderId", "ORD-001"));
+        tc.setArguments(Collections.singletonMap("orderId", "ORD-001"));
         tc.setSuccess(true);
-        r.setToolCalls(List.of(tc));
+        r.setToolCalls(Collections.singletonList(tc));
         r.setHasToolCalls(true);
         return r;
     }
@@ -464,8 +464,8 @@ class RegressionTestExecutorTest {
         ToolCallResult tc = new ToolCallResult();
         tc.setToolCallId("call-1");
         tc.setToolName(toolName);
-        tc.setArguments(Map.of("orderId", argValue));
-        response.setToolCalls(List.of(tc));
+        tc.setArguments(Collections.singletonMap("orderId", argValue));
+        response.setToolCalls(Collections.singletonList(tc));
         response.setInputTokens(50);
         response.setOutputTokens(20);
         return response;
@@ -506,4 +506,37 @@ class RegressionTestExecutorTest {
             return true;
         }
     }
+
+    @Nested
+    class ReplayArgTypes {
+
+        @Test
+        void deriveArgTypes_matchesCaptureVocabulary() {
+            Map<String, Object> args = new java.util.LinkedHashMap<>();
+            args.put("order_id", "SO-1");
+            args.put("amount", 12.5);
+            args.put("count", 3L);
+            args.put("urgent", Boolean.TRUE);
+            args.put("meta", new java.util.LinkedHashMap<>());
+            args.put("tags", new java.util.ArrayList<>());
+            args.put("missing", null);
+
+            Map<String, String> types = RegressionTestExecutor.deriveArgTypes(args);
+
+            assertEquals("string", types.get("order_id"));
+            assertEquals("number", types.get("amount"));
+            assertEquals("number", types.get("count"));
+            assertEquals("boolean", types.get("urgent"));
+            assertEquals("object", types.get("meta"));
+            assertEquals("array", types.get("tags"));
+            assertEquals("null", types.get("missing"));
+        }
+
+        @Test
+        void deriveArgTypes_nullOrEmpty_returnsEmptyMap() {
+            assertTrue(RegressionTestExecutor.deriveArgTypes(null).isEmpty());
+            assertTrue(RegressionTestExecutor.deriveArgTypes(new java.util.LinkedHashMap<>()).isEmpty());
+        }
+    }
 }
+
